# llama-Linux

./: .gitignore  AGENTS.md  CMakeLists.txt  Linux_QT_Client_Plan.md  README.md  TESTING.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cpp
app/contacts/: ContactListModel.cpp  ContactListModel.h  ContactsController.cpp  ContactsController.h
app/contacts/native/: NativeContactSyncRepository.cpp  NativeContactSyncRepository.h  NativeContactsProvider.h
app/mail/: EmailListModel.cpp  EmailListModel.h  MailController.cpp  MailController.h  RemoteContentInterceptor.cpp  RemoteContentInterceptor.h
app/pairing/: PairingController.cpp  PairingController.h
app/pgp/: PgpQrController.cpp  PgpQrController.h  PgpQrScanner.cpp  PgpQrScanner.h  PgpQrTargetValidator.cpp  PgpQrTargetValidator.h
app/platform/: SecureStoreKeychain.cpp  SecureStoreKeychain.h
app/push/: NotificationDispatcher.cpp  NotificationDispatcher.h  NtfyTopicProvisioner.cpp  NtfyTopicProvisioner.h  PushPayloadParser.cpp  PushPayloadParser.h  UnifiedPushConnector.cpp  UnifiedPushConnector.h
app/qml/: DesktopRoot.qml  MobileRoot.qml  Root.qml  qml.qrc
app/qml/components/: AddressBookPickerDialog.qml  AutocompleteDropdown.qml  Avatar.qml  DangerButton.qml  EmptyState.qml  GhostButton.qml  PillTab.qml  PrimaryButton.qml  RepeaterField.qml  RichBodyEditor.qml  SectionLabel.qml  StatusBadge.qml  ThemedTextField.qml  Toast.qml  TokenField.qml
app/qml/pages/: Compose.qml  ContactDetail.qml  ContactsList.qml  EmailDetail.qml  MfaApproval.qml  Pairing.qml  PgpMyQrCode.qml  PgpScanContactKey.qml  Settings.qml
app/qml/utils/: format.js
core/: CMakeLists.txt
core/db/: Database.cpp  EmailDao.cpp  EmailDao.h  MigrationSql.h.in
core/domain/: ContactSyncRepository.cpp  ContactSyncRepository.h  KeywordRepository.cpp  KeywordRepository.h  MailRepository.cpp  MailRepository.h  NativeContactReconciliation.cpp  NativeContactReconciliation.h  PgpQrRepository.cpp  PgpQrRepository.h
core/models/: Contact.h  StandardFolder.cpp  StandardFolder.h
core/net/: ContactPhotoClient.cpp  ContactSyncClient.cpp  ContactSyncClient.h  GroupsClient.cpp  HttpClient.cpp  HttpClient.h  MfaResponseClient.cpp  NativeRegistrationClient.cpp  NativeRegistrationClient.h  PgpQrClient.cpp  PgpQrClient.h  PushNotificationClient.cpp  PushNotificationClient.h  RelayAuth.h  RelayMailSource.cpp  RelayMailSource.h
core/stores/: CursorStore.cpp  CursorStore.h  SecureStore.h  SecureStoreFile.cpp  SecureStoreFile.h  SettingsStore.cpp  SettingsStore.h
core/theme/: AppTheme.cpp  AppTheme.h  SemanticColors.h  Shape.h  ThemePalette.cpp  ThemePalette.h
core/vcard/: VCardContact.cpp
docs/: SETUP.md
docs/superpowers/plans/: 2026-07-18-html-compose.md  2026-07-19-pairing-auth-headers-linux.md
docs/superpowers/specs/: 2026-07-18-html-compose-design.md
packaging/dbus/: com.urlxl.LlamaMail.service  com.urlxl.mail.service
packaging/flatpak/: LlamaMail.notifyrc  build.sh  com.urlxl.mail.desktop  com.urlxl.mail.json  com.urlxl.mail.metainfo.xml
po/: CMakeLists.txt  extract-messages.sh  kypost.pot  llamamail.pot
public/: manifest.webmanifest
tests/: CMakeLists.txt
tests/app/contacts/: ContactListModelTest.cpp  ContactsControllerTest.cpp
tests/app/contacts/native/: FakeNativeContactsProvider.h  NativeContactSyncRepositoryTest.cpp
tests/app/mail/: EmailListModelTest.cpp  MailControllerTest.cpp  RemoteContentInterceptorTest.cpp
tests/app/pairing/: PairingControllerTest.cpp
tests/app/pgp/: PgpQrControllerTest.cpp  PgpQrTargetValidatorTest.cpp
tests/app/platform/: SecureStoreKeychainTest.cpp
tests/app/push/: NotificationDispatcherTest.cpp  NtfyTopicProvisionerTest.cpp  PushPayloadParserTest.cpp
tests/core/db/: DatabaseTest.cpp  EmailDaoTest.cpp
tests/core/domain/: ContactPhotoRepositoryTest.cpp  ContactSyncRepositoryTest.cpp  GroupsRepositoryTest.cpp  KeywordRepositoryTest.cpp  MailRepositoryTest.cpp  NativeContactReconciliationTest.cpp  PgpQrRepositoryTest.cpp  PushRepositoryTest.cpp
tests/core/models/: ContactTest.cpp  StandardFolderTest.cpp
tests/core/net/: ContactSyncClientTest.cpp  FakeRelayServer.h  HttpClientTest.cpp  NativeRegistrationClientTest.cpp  PgpQrClientTest.cpp  PushNotificationClientTest.cpp  RelayAuthTest.cpp  RelayMailSourceTest.cpp
tests/core/stores/: CursorStoreTest.cpp  SecureStoreFileTest.cpp  SettingsStoreTest.cpp
tests/core/theme/: AppThemeTest.cpp  ThemeManagerTest.cpp  ThemePaletteTest.cpp
tests/core/vcard/: VCardContactTest.cpp
